# Paint

./: CMakeLists.txt  Paint.sln  README.md
Paint/: GUI.txt  Paint.cpp  Paint.h  Paint.vcxproj  Paint.vcxproj.filters
Paint/include/: Circle.h  Paint.h  Rectangle.h  Shape.h  WindowApi.h
Paint/src/: Circle.cpp  Paint.cpp  Rectangle.cpp
Paint/x64/Debug/: Paint.exe.recipe  Paint.ilk  paint.obj.enc  vc142.idb
Paint/x64/Debug/Paint.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Paint.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Paint/x64/Release/: Paint.exe.recipe  Paint.iobj  Paint.ipdb
Paint/x64/Release/Paint.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Paint.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
app/include/: Paint.h
app/src/: Paint.cpp
include/: Circle.h  Rectangle.h  Shape.h  WindowApi.h
src/: Circle.cpp  Rectangle.cpp
